--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start -p $PORT",
 		"lint": "next lint",
-		"export": "npm run build && next export -o _static"
+		"export": "yarn build && next export -o _static"
 	},
 	"dependencies": {
 		"@babel/core": "^7.18.5",
