--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_URL = http://localhost:3000
+REACT_APP_URL = https://stonedecor-backend.herokuapp.com
 REACT_APP_SERVER_URL = https://stonedecor-backend.herokuapp.com
 # REACT_APP_ENV = development
 REACT_APP_ENV = production
