--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start -p $PORT",
-		"lint": "next lint",
-		"export": "yarn build && next export -o _static"
+		"start": "next start",
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@babel/core": "^7.18.5",
