Add Google Analytics

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_SERVER_URL = https://stonedecor-backend.herokuapp.com
 # REACT_APP_ENV = development
 REACT_APP_ENV = production
 MAP_KEY = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXx'
+NEXT_PUBLIC_GOOGLE_ANALYTICS=UA-186405967-1
