--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
 			"@/utils/*": ["utils/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "app/utils/analytics/ga/index.js"],
 	"exclude": ["node_modules"]
 }
